<resources>
    <string name="app_name">MPCB</string>

    <!--    Home Activity-->
    <string name="error_bottom_nav">Coming soon!</string>

    <!-- Reports -->
    <string name="report_1">Industry category, Visit Details &amp; \nConsent status</string>
    <string name="report_2">Production\nDetails</string>
    <string name="report_4">Treatment\nSystem</string>
    <string name="report_3">Water &amp; Waste Water Aspect</string>
    <string name="report_5">Disposal</string>
    <string name="report_6">Online Monitoring System(Water)</string>
    <string name="report_7">Electric\nMeter Details</string>
    <string name="report_8">Last JVS\nDetails</string>
    <string name="report_9">Air Pollution\nAspect</string>
    <string name="report_10">Online Monitoring System(Stack)</string>
    <string name="report_11">Online Monitoring System(Ambient Air)</string>
    <string name="report_12">Hazardous Waste Management</string>
    <string name="report_13">Non Hazardous\nWaste Management</string>
    <string name="report_14">Tree\nPlantation</string>
    <string name="report_15">Statutory\nSubmissions</string>
    <string name="report_16">Previous\nLegal Actions</string>
    <string name="report_17">Bank Guarantee Details</string>
    <string name="add_info">Additional\nInformation</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_continue"><![CDATA[SAVE & CONTINUE]]></string>
    <string name="txt_process">Process / Fuel Burning</string>
    <string name="t_process">Process</string>
    <string name="txt_process_control">Control equipment installed</string>
    <string name="t_fuel">Fuel Burning</string>
    <string name="hztxt_categoery">Category No. &amp; type</string>
    <string name="hztxt_quantity">Quantity as per consent</string>
    <string name="hztxt_method_disposal">Method of Disposal as per consent</string>
    <string name="hztxt_actual_disposal">Actual Disposal</string>
    <string name="hztxt_quantity_disposal">Quantity Disposed (as per form 4)</string>
    <string name="hztxt_quan_disp_cwtsd">Quantity Disposed at CSWTSDS</string>
    <string name="hztxt_quan_disp_processing">Quantity Disposed for co-processing</string>
    <string name="hztxt_quan_disp_actual_user">Quantity Disposed by actual user</string>
    <string name="hztxt_last_disposal">Last Disposal quantity</string>
    <string name="hztxt_last_dis_date">Last Disposal date</string>
    <string name="hazardous_was">Hazardous waste annual returns (Submitted upto)</string>
    <string name="environment_haz">Environmental statement report (Submitted upto)</string>


    <string name="profile_title">Profile</string>
    <string name="my_visits_title">My Visits</string>
    <string name="attendance_title">Attendance</string>
    <string name="task_mngt_title">Task Management</string>
    <string name="add_task_title">Add Task</string>

    <!--    My Visits-->
    <string name="txt_visit_scheduled">Visit Scheduled On :</string>
    <string name="txt_industry_name">Industry Name : </string>
    <string name="txt_industry_id">IMIS ID : </string>
    <string name="txt_address">Address : </string>
    <string name="txt_report_submited">Report Submitted On :</string>
    <string name="txt_visited_on">Visited On :</string>
    <string name="add_task_attach_with_visit">Click here to attach with Visit</string>

    <!-- -&#45;&#45; Profile - -->
    <string name="txt_logout_title">Logout</string>
    <string name="txt_logout_message"> Are you sure you want to logout?</string>
    <string name="action_ok">Ok</string>
    <string name="action_cancel">Cancel</string>


    <!--    Notification channel ID-->
    <string name="channel_id_1">1000</string>
    <string name="channel_name_1">Test 1</string>

    <!--    Search Bar-->
    <string name="action_hint">Search by Industry Name or ID</string>

    <!-- Menu Tab -->
    <string name="title_menu">Menu</string>
    <string name="circulars">Circulars</string>
    <string name="industries_location">Industries Location</string>
    <string name="surprise_inspections">Surprise Inspections</string>
    <string name="industry_directory">Industry Directory</string>
    <string name="email">Email</string>
    <string name="offices">Offices</string>
    <string name="laboratories">Laboratories</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="faq">FAQ</string>

    <!-- Surprise Inspections -->
    <string name="applied_by_me">Applied by Me</string>
    <string name="verified_surprise_inspections">Verified Surprise Inspections</string>
    <string name="industry_list">Industry List</string>
    <string name="apply_for_surprise_inspection">Apply for Surprise Inspections</string>
    <string name="no_data_available">No data available!</string>
    <string name="pagination_previous">Previous</string>
    <string name="pagination_next">Next</string>
    <string name="title_activity_circulars">CircularsActivity</string>

    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_industry_directory">IndustryDirectoryActivity</string>

    <!-- Industry Directory  -->
    <string name="application_list">Application List</string>
    <string name="authorization">Authorization</string>
    <string name="consent">Consent</string>
    <string name="submission">Submission</string>
    <string name="bank_guarantee">Bank Guarantee</string>
    <string name="legal">Legal</string>
    <string name="visits">Visits</string>
    <string name="documents">Documents</string>

</resources>
