<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
                name="model"
                type="com.gov.mpcb.network.response.MyVisitModel" />

        <variable
                name="viewModel"
                type="com.gov.mpcb.my_visits.MyVisitsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@android:color/white"
                app:cardCornerRadius="10dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="16dp">

                <LinearLayout
                        android:id="@+id/layout_top"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    <!--                Industry ID label -->
                    <TextView
                            android:id="@+id/tv_industry_id_label"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:gravity="center_vertical"
                            android:layout_marginRight="16dp"
                            android:drawableEnd="@drawable/ic_down_arrow"
                            android:text="@string/txt_industry_id"/>

                    <!--                Industry ID text -->
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_marginTop="4dp"
                            android:layout_marginRight="16dp"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:text='@{model.industryIMISId}'
                            tools:text="696969"
                            />
                <!--                Industry ID label -->
                <TextView
                        android:id="@+id/tv_industry_name_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/txt_industry_name"/>

                <!--                Industry Name-->
                <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginRight="16dp"
                        android:text="@{model.industryName}"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="Korde Chemicals Pvt. Lyd." />

                <RelativeLayout
                        android:id="@+id/visit_scheduled_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp">

                    <!--                    Visit Scheduled on label-->
                    <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/txtxVisitScheduledOn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_visit_scheduled"
                            android:textSize="15sp" />

                    <!--                    Visit Scheduled on text-->
                    <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@id/txtxVisitScheduledOn"
                            android:textStyle="bold"
                            android:layout_marginLeft="4dp"
                            app:parseDate="@{model.scheduledOn}"
                            tools:text="03/69/6969" />

                </RelativeLayout>

                <!--                Address-->
                <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/txt_address"
                        android:textSize="15sp" />

                <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="@{model.industryAddress}"
                        android:textStyle="bold"
                        tools:text="bleh bleh bleh bleh bleh bleh " />
                </LinearLayout>

                <LinearLayout
                        android:id="@+id/layLinBottom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone"
                        tools:visibility="visible">

                    <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/bg_grey" />

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:orientation="horizontal">

                        <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="vertical">

                            <androidx.appcompat.widget.AppCompatTextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/txt_visit_scheduled"
                                    android:textSize="15sp" />

                            <androidx.appcompat.widget.AppCompatTextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="4dp"
                                    android:textStyle="bold"
                                    app:parseDate="@{model.scheduledOn}"
                                    tools:text="69/69/6969" />

                            <androidx.appcompat.widget.AppCompatTextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="16dp"
                                    android:text="@string/txt_report_submited"
                                    android:textSize="15sp" />

                            <androidx.appcompat.widget.AppCompatTextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="4dp"
                                    android:textStyle="bold"
                                    app:parseDate="@{model.reportSubmittedOn}"
                                    tools:text="69/69/6969" />
                        </LinearLayout>

                        <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="vertical">

                            <androidx.appcompat.widget.AppCompatTextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/txt_visited_on"
                                    android:textSize="15sp" />

                            <androidx.appcompat.widget.AppCompatTextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="4dp"
                                    android:textStyle="bold"
                                    app:parseDate="@{model.visitedOn}"
                                    tools:text="69/69/6969" />

                            <androidx.appcompat.widget.AppCompatTextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="16dp"
                                    android:text="Non - Compliant visit"
                                    android:textSize="15sp" />

                            <androidx.appcompat.widget.AppCompatTextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="4dp"
                                    android:text="@{model.complianceStatus}"
                                    android:textStyle="bold"
                                    />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatImageView
                                android:id="@+id/imgLocation"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:onClick="@{() -> viewModel.onCheckInClick(model, false)}"
                                android:padding="4dp"
                                android:src="@drawable/ic_location_grey"
                                app:checkInIcon="@{model}" />

                        <androidx.appcompat.widget.AppCompatImageView
                                android:id="@+id/imgReports"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:onClick="@{() -> viewModel.onVisitItemClick(model, false)}"
                                android:padding="5dp"
                                android:src="@drawable/ic_reports_grey"
                                app:visitReportIcon="@{model}" />

                        <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:layout_weight="3"
                                android:background="@drawable/shape_industry_background_green"
                                android:gravity="center_horizontal"
                                android:padding="8dp"
                                android:text="@{model.visitStatus}"
                                android:textColor="@android:color/white"
                                android:textStyle="bold"
                                app:visitStatus="@{model}"
                                tools:text="Visited" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <!--        Industry Id-->
<!--        <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="36dp"
                android:layout_marginTop="24dp"
                app:cardElevation="2dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_industry_background_green"
                    android:ellipsize="end"
                    android:maxLength="9"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:text='@{"#" + model.industryIMISId}'
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    tools:text="#696969" />
        </androidx.cardview.widget.CardView>-->
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>